plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id "org.sonarqube" version "4.0.0.2929"
}

sonarqube {
    properties {
        property("sonar.projectKey", "Rijksoverheid")
        property("sonar.projectName", "Rijksoverheid")
        property("sonar.organization", "se")
        property("sonar.host.url", "http://localhost:9000")
        property("sonar.token", "sqp_ba689b476336ad3f3d0cf804951e9fd31a538f80")
        property("sonar.tests", "./src/test/")
    }
}

apply plugin: 'io.spring.dependency-management'

group = 'se'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.3'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-security', version: '1.6.3'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.springframework.security:spring-security-config'
//    implementation 'org.springframework.security:spring-security-core'
//    implementation 'org.springframework.security:spring-security-ldap'
//    implementation 'org.springframework.security:spring-security-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-inline:3.12.4'
//    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
